# ConwayGoL

./: CMakeLists.txt  CMakeSettings.json  README.md
Header Files/: Cell.h  World.h
Source Files/: Cell.cpp  World.cpp  main.cpp
